@@ -1,3 +1,10 @@
+2009-02-25  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
+
+	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
+	(mb_wm_comp_mgr_clutter_client_configure_real): Remove the "xmas hack"
+	for systemui menus. Apparently this hasn't been effective anyway
+	because systemui is now using the notification type.
+
 2009-02-25  Gordon Williams  <gordon.williams@collabora.co.uk>
 
 	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c:
